Create delete functional for clothes
